<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddUserActivity"
    tools:showIn="@layout/activity_add_user">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/createUserEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/createUserPasswordText0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password0Hint"
            android:layout_below="@id/createUserEmailText"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/createUserPasswordText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password1Hint"
            android:layout_below="@id/createUserPasswordText0"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/createUserButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/createUserPasswordText1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="createUser"
            android:text="@string/createUserButtonText" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>