<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs412_project.csci412.wwu.edu.cs412_project.Activity_AddSensor">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:text="@string/add_sensor_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40px"
        android:textSize="12pt"
        />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:gravity="center_horizontal"
        android:hint="@string/sensor_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".8" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enable_label"
        android:text="@string/enable_default"
        android:textSize="9pt"
        app:layout_constraintLeft_toLeftOf="@id/name_field"
        app:layout_constraintTop_toBottomOf="@id/name_field"
        android:layout_marginTop="30px"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enable_check"
        app:layout_constraintRight_toRightOf="@id/name_field"
        app:layout_constraintBottom_toBottomOf="@id/enable_label"
        />

    <Button
        android:id="@+id/confirm_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/add_sensor_title"
        android:textColor="@color/buttonText"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enable_label"
        app:layout_constraintWidth_percent=".33" />

    <Button
        android:id="@+id/back_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        android:textColor="@color/buttonText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button"
        app:layout_constraintWidth_percent=".33" />
</android.support.constraint.ConstraintLayout>
